--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        </div>
 
        <div class="row">
-           <button class="button" onclick="cliked()">.</button>
+           <button class="button" onclick="cliked('.')">.</button>
         <button id="button-zero" onclick="cliked(0)">0</button>
         <button class="ev-bottun" onclick="result()">=</button>
        </div>
